# smartid-time-production

./: Dockerfile  EMAIL_FIX_GUIDE.md  EMAIL_SETUP_GUIDE.md  EMAIL_STATUS_UPDATE.md  FILE_UPLOAD_IMPLEMENTATION_SUMMARY.md  HARDWARE_TESTING_GUIDE.md  MIGRATION_INSTRUCTIONS.md  MOBILE_DASHBOARD_ATTENDANCE_ENHANCEMENTS.md  MOBILE_SERVER_SETUP.md  MOBILE_SERVER_STATUS.md  RFID_INTEGRATION_GUIDE.md  SIDEBAR_PERFORMANCE_OPTIMIZATIONS.md  SMARTID_PREMIUM_SYSTEM_DOCUMENTATION.md  SUPABASE_SETUP.md  USER_MANAGEMENT_FIXES.md  WARP.md  add_auth_user_id_column.sql  add_palm_columns.sql  advanced-connection-test.js  assign-work-group.sql  complete-fix.js  create-test-user.js  debug-koffi.js  debug-user-workgroup.sql  debug_card_enrollment.sql  debug_location.sql  docker-compose.yml  eslint.config.mjs  fix-auth-link.js  fix-jsx.js  fix-schema.js  fix-supabase-function.sql  fix-user-data.js  fix_card_enrollments_rls.sql  fix_card_enrollments_select_policy.sql  fix_rls_policies.sql  fix_user_setup_tokens.sql  fixed_primary_system_migration.sql  koffi-card-A0AC391A-1760077177684.json  list-auth-users.js  (+33 more)
docs/: EMAIL_SETUP.md
examples/: smartid-card-usage.js
migrations/: 20241007_add_institution_id_to_assignments.sql  add_institution_id_to_smartid_cards.sql  fix_card_wallets_rls.sql
nginx/: nginx.conf
palm-sdk/: InstallDriver.txt  RELEASE-PALM.md
palm-sdk/samples/src/sample/: CMakeLists.txt  palm_device.cc  palm_device.h  palm_test.cc
scripts/: check-wan-farah-nadia.js  fix-user-auth.js  migrate-setup-tokens.js  setup-demo-data.js  update-user-time-access.js
smartid_hub_mobile/: pubspec.yaml
(+342 files in other folders)
